...
    
    var body: some View {
        GenericListView(
            searchText: $searchText,
            sortOption: $sortOption,
            items: documents,
            title: "Documents",
            rowContent: { document in
                Button {
                    selectedDocument = document
                } label: {
                    ItemRowView(
                        item: document,
...
